update login token condition
